- Fixed z-index issue on Rock theme sidebar menu.

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -1295,6 +1295,10 @@ body.nav-open {
   background-color: @navbarside-background-color;
   background-color: var(--navbarside-background-color);
 
+  .nav-open & {
+    z-index: 2000;
+  }
+
   &::-webkit-scrollbar {
     width: 6px;
     background-color: transparent;
@@ -1421,7 +1425,6 @@ body.nav-open {
         top: 0;
         bottom: 0;
         left: @navbarside-width;
-        z-index: 2000;
         display: none;
         width: 280px;
         padding: 0 10px 0 12px;
